[gd_scene load_steps=34 format=3 uid="uid://dqhndl6wy8sr1"]

[ext_resource type="Texture2D" uid="uid://f0iasajm8tth" path="res://assets/UI/10 Border 01-export.png" id="1_mtcel"]
[ext_resource type="Script" path="res://scripts/selectorPersonaje.gd" id="1_umo85"]
[ext_resource type="FontFile" uid="uid://c4vjb5mibtjjs" path="res://assets/UI/PixelifySans-Regular.ttf" id="2_m364l"]
[ext_resource type="PackedScene" uid="uid://1vchbbghtkyn" path="res://scenes/boton_ui.tscn" id="3_7bgyy"]
[ext_resource type="Texture2D" uid="uid://d0gvgoowdilqg" path="res://assets/characters/player/Rolo_idle.png" id="4_8d75y"]
[ext_resource type="Texture2D" uid="uid://br31ybt5nga4r" path="res://assets/characters/player/paisa_idle.png" id="4_p7brd"]
[ext_resource type="Texture2D" uid="uid://csjsm5783hm8p" path="res://assets/characters/player/Player_Costeno_idle.png" id="5_dsa8v"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3dgjt"]
texture = ExtResource("1_mtcel")

[sub_resource type="AtlasTexture" id="AtlasTexture_yurju"]
atlas = ExtResource("5_dsa8v")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1glfa"]
atlas = ExtResource("5_dsa8v")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_phw3a"]
atlas = ExtResource("5_dsa8v")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ss1s2"]
atlas = ExtResource("5_dsa8v")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l5rxd"]
atlas = ExtResource("5_dsa8v")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7sdpd"]
atlas = ExtResource("5_dsa8v")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gip72"]
atlas = ExtResource("5_dsa8v")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvf6q"]
atlas = ExtResource("5_dsa8v")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4xwxc"]
atlas = ExtResource("4_p7brd")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yyi0v"]
atlas = ExtResource("4_p7brd")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kbby6"]
atlas = ExtResource("4_p7brd")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_opwpy"]
atlas = ExtResource("4_p7brd")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sv1v7"]
atlas = ExtResource("4_p7brd")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7wikv"]
atlas = ExtResource("4_p7brd")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3feqe"]
atlas = ExtResource("4_p7brd")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5oui"]
atlas = ExtResource("4_p7brd")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3sqkc"]
atlas = ExtResource("4_8d75y")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ubtvy"]
atlas = ExtResource("4_8d75y")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xh27c"]
atlas = ExtResource("4_8d75y")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_136n5"]
atlas = ExtResource("4_8d75y")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpdef"]
atlas = ExtResource("4_8d75y")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_401wj"]
atlas = ExtResource("4_8d75y")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qgk0h"]
atlas = ExtResource("4_8d75y")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1cwti"]
atlas = ExtResource("4_8d75y")
region = Rect2(448, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_cwm3g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yurju")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1glfa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_phw3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ss1s2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l5rxd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7sdpd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gip72")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvf6q")
}],
"loop": true,
"name": &"costeno",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4xwxc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yyi0v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kbby6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_opwpy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sv1v7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7wikv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3feqe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5oui")
}],
"loop": true,
"name": &"paisa",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3sqkc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ubtvy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xh27c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_136n5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpdef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_401wj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qgk0h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1cwti")
}],
"loop": true,
"name": &"rolo",
"speed": 10.0
}]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_umo85")

[node name="Panel" type="Panel" parent="."]
offset_left = 352.0
offset_right = 808.0
offset_bottom = 584.0
theme_override_styles/panel = SubResource("StyleBoxTexture_3dgjt")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(576, 264)
scale = Vector2(5.875, 6)
sprite_frames = SubResource("SpriteFrames_cwm3g")
animation = &"paisa"

[node name="Label" type="Label" parent="."]
offset_left = 400.0
offset_top = 72.0
offset_right = 768.0
offset_bottom = 109.0
theme_override_fonts/font = ExtResource("2_m364l")
theme_override_font_sizes/font_size = 27
text = "Selecciona Tu Personaje"
horizontal_alignment = 1

[node name="description" type="Label" parent="."]
offset_left = 424.0
offset_top = 376.0
offset_right = 739.0
offset_bottom = 448.0
theme_override_fonts/font = ExtResource("2_m364l")
theme_override_font_sizes/font_size = 27
text = "Selecciona Tu Personaje"
horizontal_alignment = 1

[node name="char_name" type="Label" parent="."]
offset_left = 512.0
offset_top = 136.0
offset_right = 640.0
offset_bottom = 166.0
theme_override_fonts/font = ExtResource("2_m364l")
theme_override_font_sizes/font_size = 25
text = "NAME"
horizontal_alignment = 1
autowrap_mode = 3

[node name="button_left" parent="." instance=ExtResource("3_7bgyy")]
offset_left = 408.0
offset_top = 256.0
offset_right = 472.0
offset_bottom = 320.0
text = "<"

[node name="button_right" parent="." instance=ExtResource("3_7bgyy")]
offset_left = 688.0
offset_top = 256.0
offset_right = 752.0
offset_bottom = 320.0
text = ">"

[node name="button_ok" parent="." instance=ExtResource("3_7bgyy")]
offset_left = 528.0
offset_top = 447.0
offset_right = 624.0
offset_bottom = 511.0
text = "START"

[connection signal="pressed" from="button_left" to="." method="_on_button_left_pressed"]
[connection signal="pressed" from="button_right" to="." method="_on_button_right_pressed"]
[connection signal="pressed" from="button_ok" to="." method="_on_button_ok_pressed"]
